; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mthca/extr_mthca_cmd.c_mthca_HW2SW_SRQ.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mthca/extr_mthca_cmd.c_mthca_HW2SW_SRQ.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mthca_dev = type { i32 }
%struct.mthca_mailbox = type { i32 }

@CMD_HW2SW_SRQ = common dso_local global i32 0, align 4
@CMD_TIME_CLASS_A = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mthca_HW2SW_SRQ(%struct.mthca_dev* %0, %struct.mthca_mailbox* %1, i32 %2) #0 {
  %4 = alloca %struct.mthca_dev*, align 8
  %5 = alloca %struct.mthca_mailbox*, align 8
  %6 = alloca i32, align 4
  store %struct.mthca_dev* %0, %struct.mthca_dev** %4, align 8
  store %struct.mthca_mailbox* %1, %struct.mthca_mailbox** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.mthca_dev*, %struct.mthca_dev** %4, align 8
  %8 = load %struct.mthca_mailbox*, %struct.mthca_mailbox** %5, align 8
  %9 = getelementptr inbounds %struct.mthca_mailbox, %struct.mthca_mailbox* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @CMD_HW2SW_SRQ, align 4
  %13 = load i32, i32* @CMD_TIME_CLASS_A, align 4
  %14 = call i32 @mthca_cmd_box(%struct.mthca_dev* %7, i32 0, i32 %10, i32 %11, i32 0, i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @mthca_cmd_box(%struct.mthca_dev*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
